# mlx-birdsong

./: .gitignore  README.md  pyproject.toml  requirements.txt
notebooks/: core.py  data.py  single.ipynb  subsample.ipynb  utils.py
notebooks/subsample/: test_metadata.csv  train_metadata.csv
notebooks/subsample/large/: train_metadata_large.csv
notebooks/wandb/: latest-run
notebooks/wandb/run-20241125_180717-r3e1smaj/: run-r3e1smaj.wandb
notebooks/wandb/run-20241125_180826-cwkfnpzm/: run-cwkfnpzm.wandb
notebooks/wandb/run-20241126_114635-e1sx56x8/: run-e1sx56x8.wandb
notebooks/wandb/run-20241126_114657-3v06w35d/: run-3v06w35d.wandb
notebooks/wandb/run-20241126_114725-vna9vj3d/: run-vna9vj3d.wandb
notebooks/wandb/run-20241126_114855-38a9n9c0/: run-38a9n9c0.wandb
notebooks/wandb/run-20241126_114906-6nff1lpv/: run-6nff1lpv.wandb
notebooks/wandb/run-20241126_115159-6dflnsn3/: run-6dflnsn3.wandb
notebooks/wandb/run-20241126_115301-nixrd9dx/: run-nixrd9dx.wandb
notebooks/wandb/run-20241126_115333-j9pe8ve0/: run-j9pe8ve0.wandb
notebooks/wandb/run-20241126_115428-pxcucbdm/: run-pxcucbdm.wandb
notebooks/wandb/run-20241126_121222-z1jn6cnv/: run-z1jn6cnv.wandb
notebooks/wandb/run-20241126_121311-bxhun5gy/: run-bxhun5gy.wandb
notebooks/wandb/run-20241126_121343-c64m8umv/: run-c64m8umv.wandb
notebooks/wandb/run-20241126_121452-669eumgy/: run-669eumgy.wandb
notebooks/wandb/run-20241126_121515-4bhqg1ex/: run-4bhqg1ex.wandb
notebooks/wandb/run-20241126_124045-7i78u9o0/: run-7i78u9o0.wandb
(+35 files in other folders)
