[tool.poetry]
name = "mlx-whisper"
version = "0.1.0"
description = ""
authors = ["John X <john.iv@x25bd.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
seaborn = "^0.13.2"
scipy = "<1.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
